--- a/benchmark/hello-world/axum/Cargo.toml
+++ b/benchmark/hello-world/axum/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 [dependencies]
 axum = "0.8"
 tokio = { version = "1", features = ["full"] }
+
+[profile.release]
+opt-level = 3
+codegen-units = 1
+panic = 'abort'
+lto = true
+debug = false
+incremental = false
+overflow-checks = false
