--- a/benchmark/hello-world/poem/Cargo.toml
+++ b/benchmark/hello-world/poem/Cargo.toml
@@ -3,8 +3,15 @@ name = "hello-world-poem"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 poem = "3"
 tokio = { version = "1.12", features = ["rt-multi-thread", "macros"] }
+
+[profile.release]
+opt-level = 3
+codegen-units = 1
+panic = 'abort'
+lto = true
+debug = false
+incremental = false
+overflow-checks = false
